--- a/package.json
+++ b/package.json
@@ -4,9 +4,11 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
+    "peer-server": "peerjs --port 9000",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "start-project": "npm run dev && npm run peer-server"
   },
   "dependencies": {
     "classnames": "^2.5.1",
@@ -15,6 +17,7 @@
     "next": "13.5.6",
     "peerjs": "^1.5.2",
     "react": "^18",
+    "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "^18",
     "react-player": "^2.14.1",
     "socket.io": "^4.7.2",
