--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "lodash": "^4.17.21",
     "lucide-react": "^0.303.0",
     "next": "13.5.6",
+    "peer": "^1.0.2",
     "peerjs": "^1.5.2",
     "react": "^18",
     "react-copy-to-clipboard": "^5.1.0",
